feat: Also make OSSIndexAnalyzer use our HTTPClient based connections